--- a/galery.html
+++ b/galery.html
@@ -109,7 +109,7 @@
 			<h5><strong><font face="Baskerville Old Face" font size="4px" >OPERASI </h5></strong></font>
 			<p>PUSAT JAGAAN KANAK-KANAK DAN REMAJA INSAF.</p>
 
-			<h6><strong><font face="Baskerville Old Face" font size="4px" > ELEFON/FAKS</h6></strong></font>
+			<h6><strong><font face="Baskerville Old Face" font size="4px" > TELEFON/FAKS</h6></strong></font>
 			<p>013-2483969 (Pn. Aishah Ghazali)</p>
 			<p>011-3743729 (En. Sufian)</p>
 
